--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ appcompat = "1.6.1"
 material = "1.11.0"
 activity = "1.8.2"
 constraintlayout = "2.1.4"
+androidLibrary = "8.3.0"
+deUndercouchDownload = "4.1.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -19,7 +21,16 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-window = { group = "androidx.window", name = "window", version = "1.2.0" }
+androidx-camera-core = { group = "androidx.camera", name = "core", version = "1.3.2" }
+androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version = "1.3.2" }
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version = "1.3.2" }
+androidx-camera-view = { group = "androidx.camera", name = "camera-view", version = "1.3.2" }
+mediapipe-tasks-vision = { group = "com.google.mediapipe", name = "tasks-vision", version = "0.10.11"}
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+androidLibrary = { id = "com.android.library", version.ref = "androidLibrary" }
+deUndercouchDownload = { id = "de.undercouch.download", version.ref = "deUndercouchDownload" }
