--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,10 @@ appcompat = "1.6.1"
 material = "1.11.0"
 activity = "1.8.2"
 constraintlayout = "2.1.4"
+navigation = "2.5.3"
 androidLibrary = "8.3.0"
 deUndercouchDownload = "4.1.2"
+mediapipe = "0.10.11"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,7 +28,9 @@ androidx-camera-core = { group = "androidx.camera", name = "core", version = "1.
 androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version = "1.3.2" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version = "1.3.2" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version = "1.3.2" }
-mediapipe-tasks-vision = { group = "com.google.mediapipe", name = "tasks-vision", version = "0.10.11"}
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation"}
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation"}
+mediapipe-tasks-vision = { group = "com.google.mediapipe", name = "tasks-vision", version.ref = "mediapipe"}
 
 
 [plugins]
